# libcamhal

./: AUTHORS  Android.mk  CMakeLists.txt  Makefile.am  README.md  configure.ac  libcamhal.doxy  release.sh
aal/: Android.mk  Camera3AMetadata.cpp  Camera3AMetadata.h  Camera3HAL.cpp  Camera3HAL.h  Camera3HALModule.cpp  Camera3Stream.cpp  Camera3Stream.h  HALv3Interface.h  HALv3Utils.h  IntelAEStateMachine.cpp  IntelAEStateMachine.h  IntelAFStateMachine.cpp  IntelAFStateMachine.h  IntelAWBStateMachine.cpp  IntelAWBStateMachine.h  JpegProcessor.cpp  JpegProcessor.h  MetadataConvert.cpp  MetadataConvert.h  PostProcessor.cpp  PostProcessor.h  RequestManager.cpp  RequestManager.h  ResultProcessor.cpp  ResultProcessor.h
aal/android/: Camera3Buffer.cpp  Camera3Buffer.h  Camera3Format.cpp  Camera3Format.h  GenGfx.cpp  Gfx.h  HALv3Header.h  OpenSourceGFX.cpp
aal/chrome/: Camera3Buffer.cpp  Camera3Buffer.h  HALv3Header.h
cmake/: FindIA_IMAGING.cmake  FindIPUSHARED.cmake  FindLIBIPU.cmake  libcamhal.spec-3.8.cmakein  libcamhal.spec.cmakein
config/: README
config/ipu4/: file_src_config_sample.xml  libcamhal_profile.xml  psys_policy_profiles.xml
config/ipu6/: file_src_config_sample.xml  libcamhal_profile.xml  psys_policy_profiles.xml  tunning_profiles.xml
halv1/: Android.mk  GenGfx.cpp  Gfx.h  SocCameraHWInterface.cpp  SocCameraHWInterface.h
halv3/: Android.mk  Camera2Module.cpp  Camera2Module.h  Camera3Channel.cpp  Camera3Channel.h  Camera3HALHeader.h  Camera3HWI.cpp  Camera3HWI.h  GenGfx.cpp  Gfx.h  OpenSourceGFX.cpp  StreamBuffer.cpp  StreamBuffer.h  camera3.h  camera_common.h
include/api/: AlgoTuning.h  ICamera.h  Parameters.h
include/linux/: intel-ipu4-isys.h  ipu-psys.h  v4l2-subdev.h  videodev2.h
src/: Android.mk  CMakeLists.txt
src/3a/: AiqCore.cpp  AiqCore.h  AiqEngine.cpp  AiqEngine.h  AiqPlus.cpp  AiqPlus.h  AiqResult.cpp  AiqResult.h  AiqResultStorage.cpp  AiqResultStorage.h  AiqSetting.cpp  AiqSetting.h  AiqStatistics.cpp  AiqStatistics.h  AiqUnit.cpp  AiqUnit.h  AiqUtils.cpp  AiqUtils.h  Android.mk  CMakeLists.txt  I3AControlFactory.cpp  ImagingControl.h  IntelDvs.cpp  IntelDvs.h  IntelMkn.cpp  IntelMkn.h  LensManager.cpp  Ltm.cpp  Ltm.h  SensorManager.cpp  SensorManager.h
src/core/: ATEUnit.cpp  ATEUnit.h  Android.mk  BufferQueue.cpp  BufferQueue.h  CMakeLists.txt  CameraBuffer.cpp  CameraBuffer.h  CameraDevice.cpp  CameraDevice.h  CameraEvent.cpp  CameraEventType.h  CameraStream.cpp  CameraStream.h  CaptureUnit.cpp  CaptureUnit.h  CsiMetaDevice.cpp  CsiMetaDevice.h  DeviceBase.cpp  DeviceBase.h  FileSource.cpp  FileSource.h  IspParamAdaptor.cpp  IspParamAdaptor.h  IspSettings.h  LensHw.cpp  LensHw.h  PSysProcessor.cpp  PSysProcessor.h  ProcessorManager.cpp  ProcessorManager.h  RequestThread.cpp  RequestThread.h  SensorHwCtrl.cpp  SensorHwCtrl.h  SensorOB.cpp  SensorOB.h  SofSource.cpp  SofSource.h  SwImageProcessor.cpp  (+1 more)
src/hal/: Android.mk  CameraHal.cpp  CameraHal.h  ICamera.cpp
src/isp_control/: IspControlUtils.cpp
src/iutils/: Android.mk  CMakeLists.txt  CameraDump.cpp  CameraDump.h  CameraLog.cpp  CameraLog.h  CameraShm.cpp  RWLock.h  SwImageConverter.cpp  Thread.cpp  Trace.cpp  Trace.h  Utils.cpp  Utils.h
src/jpeg/: Android.mk  ColorConverter.cpp  ColorConverter.h  EXIFMaker.cpp  EXIFMaker.h  EXIFMetaData.cpp  EXIFMetaData.h  Exif.h  ExifCreater.cpp  ExifCreater.h  IJpeg.cpp  IJpeg.h  JpegMaker.cpp  JpegMaker.h  SWJpegEncoder.cpp  SWJpegEncoder.h
src/metadata/: Android.mk  CMakeLists.txt  CameraMetadata.cpp  CameraMetadata.h  ParameterGenerator.cpp  ParameterGenerator.h  ParameterHelper.cpp  Parameters.cpp  icamera_metadata_base.cpp  icamera_metadata_base.h  icamera_metadata_tag_info.c  icamera_metadata_tags.h
src/platformdata/: Android.mk  CMakeLists.txt  CameraConf.cpp  CameraConf.h  CameraProfiles.cpp  CameraProfiles.h  CameraTypes.h  PlatformData.cpp  PlatformData.h  PolicyProfiles.cpp  PolicyProfiles.h  TunningProfiles.cpp  TunningProfiles.h
src/v4l2/: Android.mk  CMakeLists.txt  MediaControl.cpp  MediaControl.h  SysCall.cpp  V4l2Buffer.cpp  V4l2Buffer.h  V4l2Dev.cpp  V4l2Dev.h  V4l2DevBase.cpp  V4l2DevBase.h  V4l2DeviceFactory.cpp  V4l2DeviceFactory.h  V4l2SubDev.cpp  V4l2SubDev.h
test/: Makefile  README  camera_compare.json  dispose_log.py  external_hooks.sh  file_src_config_sample.xml  gcss  libcamhal_profile.xml  main.cpp  psys_policy_profiles.xml  run_all_mondello_tests.sh  sensors  test-all.py  tunning_profiles.xml
test/UT/: MockSysCall.cpp  MockSysCall.h  aiq_stats_test_data.h  case_api_multithread.cpp  case_camera_3a_control.cpp  case_camera_aiq_libraries.cpp  case_camera_cpf.cpp  case_camera_device_ops.cpp  case_camera_io_mode.cpp  case_camera_iq_effect.cpp  case_camera_metadata.cpp  case_camera_pal_p2p.cpp  case_camera_parameters.cpp  case_camera_per_frame_control.cpp  case_camera_psyslite.cpp  case_camera_static_info.cpp  case_camera_stream_ops.cpp  case_common.cpp  case_common.h  case_dual.cpp  case_graph.cpp  case_qbuf_dqbuf.cpp  case_thread.cpp  case_virtual_channel.cpp
test/chrome/: Makefile.am  README.txt  configure.ac  unittest.supp
test/chrome/src/: control_3a_test.cpp  hal_module_basic_tests.cpp  main.cpp  multi_streams_test.cpp  per_frame_test.cpp  pnp_aal_test.cpp  pnp_aal_test.h  raw_hal_test.h  raw_hal_test_jpeg_resolution.cpp  raw_hal_test_yuv_resolution.cpp  raw_hal_tests.cpp  supported_streams_test.cpp  test_parameterization.cpp  test_parameterization.h  test_stream_factory.cpp  test_stream_factory.h  test_utils.h  valgrind_test.cpp
test/res/: file_src_input_320_240.GRBG8V32
tools/: GcFlip.py  README  auto_review.sh  board_run.sh  camtune-record
tools/simple_custom_3a/: Customized3A.cpp  Customized3A.h  Customized3AModule.h  Customized3ATypes.h  Makefile.am  configure.ac  readme.txt
tools/simple_custom_3a/rpm/: README  build_rpm.sh  libcustomized_3a.spec
tools/simple_custom_aic/: CustomizedAic.cpp  CustomizedAic.h  CustomizedAicModule.h  CustomizedAicTypes.h  ICustomizedAic.h  Makefile.am  configure.ac
tools/simple_custom_aic/rpm/: README  build_rpm.sh  libcustomized_aic.spec
(+170 files in other folders)
